stussy-clonecoding day2

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,14 +4,69 @@
     box-sizing: border-box;
     font-size: 11px;
     font-family: 'Noto Sans KR', sans-serif;
-
+    letter-spacing: 1px;
 }
 
 body,
 html {
     margin: 0;
-    height: 100%;
+}
 
+input {
+    margin-bottom: 15px;
+    border: 1px solid rgb(198, 198, 198);
+    padding: 10px;
+    width: 100%;
+    line-height: 5px;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid black;
+}
+
+@keyframes button-fadein {
+    from {
+        background-color: white;
+    }
+
+    to {
+        background-color: black;
+        text-decoration: underline;
+    }
+}
+
+@keyframes button-fadeout {
+    from {
+        background-color: black;
+        text-decoration: underline;
+    }
+
+    to {
+        background-color: white;
+    }
+}
+
+@keyframes black-button-fadein {
+    from {
+        background-color: black;
+    }
+
+    to {
+        background-color: rgb(100, 100, 100);
+        text-decoration: underline;
+    }
+}
+
+@keyframes black-button-fadeout {
+    from {
+        background-color: rgb(100, 100, 100);
+        text-decoration: underline;
+    }
+
+    to {
+        background-color: black;
+    }
 }
 
 button {
@@ -23,7 +78,22 @@ button {
     font-weight: 700;
     color: black;
     background-color: white;
+    animation: button-fadeout 0.1s linear forwards;
     cursor: pointer;
+}
+
+button:active {
+    animation: button-fadein 0.1s linear forwards;
+}
+
+.black-button {
+    color: white;
+    background-color: black;
+    animation: black-button-fadeout 0.1s linear forwards;
+}
+
+.black-button:active {
+    animation: black-button-fadein 0.1s linear forwards;
 }
 
 a {
