--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -4,12 +4,15 @@ header {
 }
 
 .header-container {
-    position: sticky;
+    position: fixed;
     z-index: 10;
+    top: 0;
 
     width: 100%;
     height: 60px;
     background-color: bisque;
+
+    background-color: #ffffff;
 }
 
 .header-flex {
@@ -19,7 +22,7 @@ header {
 
     padding: 0 20px;
 
-    /* width: 100%; */
+    width: 100%;
     height: 60px;
 
 
@@ -68,8 +71,14 @@ header {
     width: auto;
     height: 11px;
 
+    animation: none;
+
     font-weight: 400;
 
+}
+
+.site-header-button:active {
+    animation: none;
 }
 
 .site-header-button:hover {
