stussy-clonecoding study5

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -105,3 +105,9 @@ a:hover {
     font-weight: 700;
     text-decoration: underline;
 }
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
