--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/header.css">
     <link rel="stylesheet" href="/static/css/account.css">
-    <script src="https://code.jquery.com/jquery-latest.mis.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 
 <body>
@@ -74,8 +74,12 @@
                 <h1 class="login-title">ACCOUNT</h1>
                 <div class="login-container">
                     <section class="login-current">
-
                         <h2 class="login-subheader">신규 회원가입</h2>
+                        <div class="account-errors errors-invisible">
+                            <ul>
+
+                            </ul>
+                        </div>
                         <div class="login-name">
                             <div class="login-half">
                                 <input type="text" class="login-input" placeholder="이름">
