--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,7 +19,7 @@ textarea {
     border: 1px solid rgb(198, 198, 198);
     padding: 10px;
     width: 100%;
-    line-height: 5px;
+    /* line-height: 5px; */
 }
 
 input:focus,
