--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -109,6 +109,11 @@ a:hover {
     text-decoration: underline;
 }
 
+.a-selected {
+    font-weight: 700;
+    text-decoration: underline;
+}
+
 ul {
     margin: 0;
     padding: 0;
