--- a/src/main/resources/templates/admin/product_list.html
+++ b/src/main/resources/templates/admin/product_list.html
@@ -104,27 +104,7 @@
                         </div>
                         <div>
                             <ul class="page-buttons">
-                                <a href="">
-                                    <li>&#60;</li>
-                                </a>
-                                <a href="">
-                                    <li>1</li>
-                                </a>
-                                <a href="">
-                                    <li>2</li>
-                                </a>
-                                <a href="">
-                                    <li>3</li>
-                                </a>
-                                <a href="">
-                                    <li>4</li>
-                                </a>
-                                <a href="">
-                                    <li>5</li>
-                                </a>
-                                <a href="">
-                                    <li>&#62;</li>
-                                </a>
+
                             </ul>
                         </div>
                         <table class="product-list">
@@ -141,74 +121,8 @@
                                 </tr>
                             </thead>
 
+                            <tbody class="list-body">
 
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>TEES</td>
-                                    <td>상품명</td>
-                                    <td><span>원</span></td>
-                                    <td>색상</td>
-                                    <td>사이즈</td>
-                                    <td><button class="list-button detail-button"><i
-                                                class="fa-regular fa-file-lines"></i></button>
-                                    </td>
-                                    <td><button class="list-button delete-button"><i
-                                                class="fa-regular fa-trash-can"></i></button>
-                                    </td>
-                                </tr>
-                                <tr class="product-detail">
-                                    <td colspan="8">
-                                        <table class="product-info">
-                                            <tr>
-                                                <td><input type="text" class="product-input" placeholder="가격"></td>
-                                                <td><input type="text" class="product-input" placeholder="색상"></td>
-                                                <td><input type="text" class="product-input" placeholder="사이즈"></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="3"><textarea class="product-input"
-                                                        placeholder="간략 설명"></textarea>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="3"><textarea class="product-input"
-                                                        placeholder="상세 설명"></textarea></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="3"><textarea class="product-input"
-                                                        placeholder="기타 설명"></textarea></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="3"><textarea class="product-input"
-                                                        placeholder="관리 방법"></textarea></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="3"><textarea class="product-input"
-                                                        placeholder="배송 설명"></textarea></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="3">
-                                                    <form enctype="multipart/form-data">
-                                                        <div class="product-img-inputs">
-                                                            <label>상품 이미지</label>
-                                                            <button type="button" class="add-button">추가</button>
-                                                            <input type="file" class="file-input product-visible"
-                                                                name="file" multiple>
-                                                        </div>
-                                                    </form>
-                                                    <div class="product-images">
-
-                                                    </div>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td colspan="3"><button type="button"
-                                                        class="black-button update-button">수정하기</button>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
                             </tbody>
                         </table>
 
